removed lazy load & framer motion added, mobile responsive navbar not applied

--- a/index.html
+++ b/index.html
@@ -11,26 +11,13 @@
       integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
       crossorigin="anonymous"
     />
-    <!-- Font 400 for resume btn -->
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800&display=swap"
       rel="stylesheet"
     />
-    <!-- font 200  -->
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@200&display=swap"
-      rel="stylesheet"
-    />
-
-    <!-- font 800  -->
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap"
-      rel="stylesheet"
-    /> -->
   </head>
   <body>
     <div id="root"></div>
